<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_resul_pun"
        android:layout_width="295dp"
        android:layout_height="42dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="16dp"
        android:text="Datos del expositor"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edi_detalle_expositor"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="51dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/expositor"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_resul_pun" />

    <EditText
        android:id="@+id/edi_detalle_evaluador"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="51dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/evaluador"
        android:enabled="false"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edi_detalle_expositor" />

    <EditText
        android:id="@+id/edi_detalle_asesor"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="51dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/asesor"
        android:enabled="false"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edi_detalle_evaluador" />

</android.support.constraint.ConstraintLayout>